--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -1,10 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:padding="10dp"
     android:layout_height="match_parent">
+    <TextView
+        android:padding="50dp"
+        android:text="Vision"
+        android:textSize="32dp"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:textSize="20sp"
+            android:text="协议："
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Spinner
+            android:entries="@array/protocol"
+            android:id="@+id/sp_protocol"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </Spinner>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:textSize="20sp"
+            android:text="规格："
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Spinner
+            android:entries="@array/resolution"
+            android:id="@+id/sp_resolution"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </Spinner>
+    </LinearLayout>
+
+    <EditText
+        android:text="zoson"
+        android:id="@+id/et_addr"
+        android:textSize="24sp"
+        android:hint="Enter your room number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <Button
-        android:text="连接"
+        android:layout_marginTop="10dp"
+        android:text="Connect"
+        android:textSize="18sp"
+        android:textColor="@android:color/white"
+        android:background="@android:color/holo_green_dark"
         android:onClick="clickToConnect"
         android:layout_width="match_parent"
         android:layout_height="40dp" />
+    <TextView
+        android:layout_marginTop="10dp"
+        android:text="made by Zoson"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
