--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
+    <TextView
+        android:id="@+id/tv_title1"
+        android:text="录像"
+        android:textSize="20sp"
+        android:textColor="#fff"
+        android:padding="4dp"
+        android:background="#000"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <SurfaceView
+        android:layout_below="@+id/tv_title1"
+        android:layout_centerHorizontal="true"
         android:id="@+id/sv_camera"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="320dp"
-        android:layout_height="240dp" />
-    <Button
-        android:text="start"
-        android:onClick="onStart"
-        android:layout_width="wrap_content"
+        android:layout_width="360dp"
+        android:layout_height="300dp" />
+    <TextView
+        android:layout_below="@+id/sv_camera"
+        android:id="@+id/tv_title2"
+        android:text="直播"
+        android:textSize="20sp"
+        android:textColor="#fff"
+        android:padding="4dp"
+        android:background="#000"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <Button
-        android:text="end"
-        android:onClick="onEnd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <SurfaceView
+        android:layout_below="@id/tv_title2"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/sv_video"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
+    <TableLayout
+        android:id="@+id/buttonground"
+        android:layout_alignParentBottom="true"
+        android:stretchColumns="0,1,2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <Button
+                android:id="@+id/bt_start"
+                android:background="@android:color/holo_green_dark"
+                android:text="start"
+                android:onClick="onStart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/bt_stop"
+                android:background="@android:color/holo_red_dark"
+                android:text="end"
+                android:onClick="onEnd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/bt_test"
+                android:background="@android:color/white"
+                android:text="test"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </TableRow>
+    </TableLayout>
 
-</LinearLayout>
+
+</RelativeLayout>
